src/styles/_utilities.scss
@mixin rotate($deg) {
    -webkit-transform:  rotate($deg);
       -moz-transform:  rotate($deg);
         -o-transform:  rotate($deg);
        -ms-transform:  rotate($deg);
            transform:  rotate($deg);
}

@mixin -dpl-transition() {
    -webkit-transition: all 200ms ease-out;
    -moz-transition: all 200ms ease-out;
    transition: all 200ms ease-out;
}

.clear {
	clear:both
}

@mixin clearfix-alt{ //apply mixin rather than using extra clearfix div
  &::after {
    clear: both;
    content: "";
    display: block;
  }
}

.full-width {
	width: 100%;
}

// Spacing helpers
$base-spacing: 1em;
$large-spacing: $base-spacing*2;
$small-spacing: $base-spacing/2;

$page-gutter: calc(3vw + 1rem);
$half-gutter: calc(1.5vw + 1rem);
$third-gutter: calc(1vw + 1rem);
$negative-page-gutter: calc(-1 * (3vw + 1rem));
$negative-half-gutter: calc(-1 * (1.5vw + 1rem));
$negative-third-gutter: calc(-1 * (1vw + 1rem));
// Gutter transformations
$page-gutter-overflow: calc((3vw + 1rem) - 30px); //Removes fixed size from dynamic gutter


// Spacing helper classes
.margin-top {
    margin-top: $page-gutter;

    &--overflow {
        margin-top: $page-gutter-overflow;
    }
}

.margin-top--half {
    margin-top: $half-gutter;
}

.margin-bottom {
    margin-bottom: $page-gutter;

    &--overflow {
        margin-bottom: $page-gutter-overflow;
    }
}

.margin-bottom--half {
    margin-bottom: $half-gutter;
}

.padding-top {
    padding-top: $page-gutter;

    &--overflow {
        padding-top: $page-gutter-overflow;
    }
}

.padding-top--half {
    padding-top: $half-gutter;
}

.padding-bottom {
    padding-bottom: $page-gutter;

    &--overflow {
        padding-bottom: $page-gutter-overflow;
    }
}

.padding-bottom--half {
    padding-bottom: $half-gutter;
}

.no-margin-top {
    margin-top: 0 !important;
}

.no-margin-bottom {
    margin-bottom: 0 !important;
}

.no-padding-top {
    padding-top: 0 !important;
}

.no-padding-bottom {
    padding-bottom: 0 !important;
}

// Old spacing classes
.top-buffer {
	margin-top: 30px;
}

.bottom-buffer {
	margin-bottom: 50px;
}

// Responsive images
img {
    height: auto;
    max-width: 100%;
}

// Responsive helpers
.pull-right-sm {
    @media (min-width: 768px){
        float:right;
    }
}

.pull-left-sm-max {
    @media (max-width: 767px){
        float:left;
    }
}

/* Remove mobile safari default styles */

textarea, input[type~=text], input[type~=submit] {
    -webkit-appearance: none;
    border-radius: 0;
}

/* PLACEHOLDERS */
/* General card */
%card {
    background-color: white;
    -webkit-box-shadow: 0 3px 1px -2px rgba(0,0,0,0.2), 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12);
    -moz-box-shadow: 0 3px 1px -2px rgba(0,0,0,0.2),0 2px 2px 0 rgba(0,0,0,0.14),0 1px 5px 0 rgba(0,0,0,0.12);
    box-shadow: 0 3px 1px -2px rgba(0,0,0,0.2), 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12);
    box-sizing: border-box;

    // Make drop shadow slightly more prominent on hover.
    &:hover {
       -webkit-box-shadow: 0 3px 2px -2px rgba(0,0,0,0.2), 0 3px 2px 0 rgba(0,0,0,0.14), 0 2px 5px 0 rgba(0,0,0,0.12);
        -moz-box-shadow: 0 3px 2px -2px rgba(0,0,0,0.2),0 3px 2px 0 rgba(0,0,0,0.14),0 2px 5px 0 rgba(0,0,0,0.12);
        box-shadow: 0 3px 2px -2px rgba(0,0,0,0.2), 0 3px 2px 0 rgba(0,0,0,0.14), 0 2px 5px 0 rgba(0,0,0,0.12); 
    }
}

/* DPL HELPERS */
.pattern-wrapper {
    border-bottom:1px $sta-grey dashed;
    border-top:1px $sta-grey dashed;
    margin-bottom: 30px;
}

/* LAZYLOAD fade image in after load */
.lazyload,
.lazyloading {
    opacity: 0;
}
.lazyloaded {
    opacity: 1;
    transition: opacity 300ms;
}

// Wrapper for expanded links
.expanded-link-wrapper {
    position: relative;
}

// Colour pallete and swatch
.colour-palette {
    display: flex;
    flex-wrap: wrap;
}

.swatch {
    background: none !important;
    display: flex;
    flex-direction: column;
    margin: 0 1em 1em 0;
    width: 14em;
    -webkit-box-shadow: 0 3px 1px -2px rgba(0,0,0,0.2), 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12);
    -moz-box-shadow: 0 3px 1px -2px rgba(0,0,0,0.2),0 2px 2px 0 rgba(0,0,0,0.14),0 1px 5px 0 rgba(0,0,0,0.12);
    box-shadow: 0 3px 1px -2px rgba(0,0,0,0.2), 0 2px 2px 0 rgba(0,0,0,0.14), 0 1px 5px 0 rgba(0,0,0,0.12);

    p {
        font-size: 1rem;
        margin: 0;
        padding: 0.8rem 1rem 0 1rem;    
    }
}
.swatch__colour {
    height: 6em;
    width: 100%;
}
.swatch-group {
    // Group heading and description
    flex-grow: 1;
}
.swatch__heading {
    border-bottom: 1px solid $sta-grey-light;
    font-size: 1em;
    font-weight: bold;
    line-height: inherit;
    padding: 0.8rem 1rem;
    margin: 0;

    small {
        color: $sta-grey-dark;
        font-size: 1rem;
    }
}
.swatch__details {
    margin-bottom: 0.8rem;
}

